# daq_ingcer

./: .gitignore  Dockerfile  GUIA_DESARROLLO.md  INSTRUCCIONES.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json  srs.md
.kiro/specs/daq-software/: .config.kiro  design.md  requirements.md  tasks.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: adquisicion.rs  ensayos.rs  esquemas.rs  instrumentos.rs  mod.rs
src-tauri/src/modbus/: adam.rs  client.rs  janitza.rs  mod.rs
src-tauri/src/persistence/: csv_writer.rs  json_store.rs  mod.rs  recovery.rs
src-tauri/src/polling/: mod.rs  polling_loop.rs  scheduler.rs
src-tauri/src/types/: ensayo.rs  esquema.rs  instrumento.rs  lectura.rs  mod.rs
src/components/ensayo/: AliasEditor.tsx  ControlEnsayo.tsx  CrearEnsayoModal.tsx  PanelEstadisticas.tsx  PanelInstantaneo.tsx
src/components/esquemas/: CrearEsquemaModal.tsx  EditarEsquemaModal.tsx  EsquemaCard.tsx  SelectorInstrumentos.tsx
src/components/graficos/: CotasControl.tsx  GraficoElectrico.tsx  GraficoTemperatura.tsx
src/components/shared/: ConfirmModal.tsx  (+4 more)
src/hooks/: useCargaEnsayo.ts  useEstadisticas.ts  useNuevaLectura.ts
src/lib/: csvParser.ts  estadisticas.ts  tauriCommands.ts
src/store/: useEnsayoStore.ts  useEsquemasStore.ts  useUiStore.ts
src/types/: ensayo.ts  esquema.ts  index.ts  instrumento.ts  lectura.ts
src/views/: EnsayoView.tsx  EsquemasView.tsx  RevisarEnsayoView.tsx
