[package]
name = "daq-ingcer"
version = "0.1.0"
edition = "2021"
description = "DAQ Software - Adquisición de datos industriales"

[dependencies]
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }
tokio-modbus = { version = "0.14", features = ["tcp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
